[package]
name = "markov_bot"
description = "A discord chat bot written in Rust"
repository = "https://github.com/TheKroni/markov-bot"
license = "MIT"
version = "1.4.0"
authors = ["Kroni"]
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1.0"
regex = "1.11"
markov_strings = "0.1.5"
dotenvy = "0.15"
crossbeam = "0.8"
rayon = "1.9"
strum = "0.26"
strum_macros = "0.26"
rand = "0.8.5"
dashmap = { version = "6.1", features = ["serde"] }
serde = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql"] }
reqwest = "0.11"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.23" }
tracing-subscriber = { version = "0.3", features = [
	"tracing-log",
	"env-filter",
] }
opentelemetry-otlp = "0.15"
futures = "0.3"
itertools = "0.13"
serenity = { version = "0.12", features = [
	"cache",
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"unstable_discord_api",
	"voice",
] }
# requires yt-dlp and opus in order for voice commands to work
songbird = { version = "0.4", features = ["builtin-queue", "serenity"] }
infer = "0.16.0"
uuid = "1.10.0"

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[profile.dev.package.sqlx-macros]
opt-level = 3
