[package]
name = "markov_bot"
description = "A discord chat bot written in Rust"
repository = "https://github.com/TheKroni/markov-bot"
license = "MIT"
version = "1.4.0"
authors = ["Kroni"]
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1.0"
regex = "1.11"
dotenvy = "0.15"
crossbeam = "0.8"
rayon = "1.9"
strum = "0.27"
strum_macros = "0.27"
rand = "0.8"
dashmap = { version = "6.1", features = ["serde"] }
serde = "1.0"
anyhow = "1.0"
thiserror = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql"] }
reqwest = "0.12"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.30" }
tracing-subscriber = { version = "0.3", features = [
	"tracing-log",
	"env-filter",
	"chrono",
] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "grpc-tonic"] }
futures = "0.3"
itertools = "0.14"
serenity = { version = "0.12", features = [
	"cache",
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"unstable_discord_api",
	"voice",
] }
# requires yt-dlp and opus in order for voice commands to work
songbird = { version = "0.5", features = ["builtin-queue", "serenity"] }
infer = "0.19.0"
uuid = "1.16"
markov_str = { version = "0.3.0", features = ["serde", "serialize"] }
chrono = "0.4.40"
rspotify = { version = "0.14.0", features = ["env-file"] }
url = "2.5.4"

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[profile.dev.package.sqlx-macros]
opt-level = 3
