[package]
authors = ["Simon Cambier"]
categories = ["text-processing"]
description = "A simplistic Markov chain text generator"
edition = "2018"
homepage = "https://fossil.scambier.xyz/markov-strings-rust"
keywords = ["markov", "chain", "procedural", "generation", "text"]
license = "GPL-3.0-only"
name = "markov_strings"
repository = "https://fossil.scambier.xyz/markov-strings-rust"
version = "0.1.4"

[dependencies]
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
